--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="/static/css/icon/bookico.svg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="_csrf" th:content="${_csrf.token}" th:if="${_csrf}"/>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="/static/vendor/bootstrap-4.1.3/css/bootstrap.min.css">
