--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -158,6 +158,7 @@
         <!-- 登入內容 -->
         <div class="tab-pane fade show active" id="profile" role="tabpanel" aria-labelledby="profile-tab">
           <form class="loginform login-form" method="post" action="/perform_login">
+            <input type="hidden" name="_csrf" th:value="${_csrf.token}" th:if="${_csrf}">
             <button type="button" class="btn btn-primary btn-lg btn-block fb-btn"><img
                 src="/static/css/icon/fb-icon-w.svg" width="30px">Sign in with Facebook</button>
             <a type="button" class="btn btn-danger btn-block go-btn" th:href="@{/oauth2/authorization/google}"><img src="/static/css/icon/google.svg"
@@ -219,6 +220,7 @@
         <!-- 註冊內容 -->
         <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
           <form class="loginform reg-form" action="/register" method="post">
+            <input type="hidden" name="_csrf" th:value="${_csrf.token}" th:if="${_csrf}">
             <div class="form-froup">
               <label for="reg-username">User Name</label>
               <div class="inputerror">
